tests/security/testTaintedInputInAssignedArrayIsEchoed/output.txt
ERROR: TaintedData - input.hack:6:6 - Detected tainted HTML tags